<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <TextView
        android:id="@+id/tv_add_expense_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/add_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_expense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/expense_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_expense_note" />

    <EditText
        android:id="@+id/et_expense"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_expense"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_expense_name" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/category"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_expense" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="349dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/amount"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/et_edit_amount"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="147dp"
        android:layout_height="63dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/add_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_amount" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="147dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>